Improved UX and accessibility of collapsable components, fixed jump/stutter when sorting first item down

--- a/app/assets/stylesheets/koi/components/_composable.scss
+++ b/app/assets/stylesheets/koi/components/_composable.scss
@@ -29,6 +29,11 @@
 // =========================================================================
 // Fields
 // =========================================================================
+$composable-field-gutters: $xxx-small-unit;
+
+.composable--fields {
+  margin-top: $composable-field-gutters * -1;
+}
 
 .composable--field {
   border: $divider;
@@ -96,8 +101,8 @@
   border-left: $divider;
 }
 
-.composable--field + .composable--field {
-  margin-top: $xxx-small-unit;
+.composable--field--wrapper {
+  padding-top: $composable-field-gutters;
 }
 
 .composable--field-heading--type {
